--- a/src/common/constants.scss
+++ b/src/common/constants.scss
@@ -72,6 +72,7 @@ body {
   --tooltip-triangle-height: 0.7rem;
   --tooltip-margin: 5px;
   --slide-in-translate-y: 100px;
+  --max-width: 1400px;
 }
 
 body.light {
