--- a/src/components/reactcomponents/comments-reactcomponent/comments-reactcomponent.scss
+++ b/src/components/reactcomponents/comments-reactcomponent/comments-reactcomponent.scss
@@ -6,6 +6,7 @@
 .comments-reactcomponent .inner {
   background: var(--article-background-color);
   width: 70%;
+  max-width: var(--max-width);
   padding: 8rem;
   padding-top: 4rem;
   margin: 0 auto calc(var(--header-height) + 4rem);
@@ -15,7 +16,7 @@
 }
 
 @media screen and (min-width: 720px) and (max-width: 1200px) {
-  .comments-reactcomponent {
+  .comments-reactcomponent .inner {
     width: 80%;
     padding: 6rem;
     padding-top: 4rem;
@@ -24,7 +25,7 @@
 }
 
 @media screen and (max-width: 720px) {
-  .comments-reactcomponent {
+  .comments-reactcomponent .inner {
     width: 100%;
     padding: 4rem;
     border-radius: 0;
